monitoring/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.dev.cgraaaj.in`)
      kind: Rule
      services:
        - name: grafana
          port: 80
          sticky:
            cookie:
              httpOnly: true
              name: grafana
              secure: true
              sameSite: none
      middlewares:
        - name: default-headers
          namespace: default
        - name: ak-outpost-authentik-embedded-outpost
          namespace: authentik
      priority: 10
    # This part is only required for single-app setups
    # - kind: Rule
    #   match: "Host(`grafana.cgraaaj.in`) && PathPrefix(`/outpost.goauthentik.io/`)"
    #   priority: 15
    #   services:
    #       - kind: Service
    #         # Or, to use an external Outpost, create an ExternalName service and reference that here.
    #         # See https://kubernetes.io/docs/concepts/services-networking/service/#externalname
    #         name: ak-outpost-authentik-embedded-outpost
    #         port: 9000
  tls:
    secretName: wildcard-dev-cgraaaj-in-tls
