monitoring/kiali-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kiali-ingress
  namespace: istio-system
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`kiali.dev.cgraaaj.in`)
      kind: Rule
      services:
        - name: kiali
          port: 20001
      middlewares:
        - name: default-headers
          namespace: default
  tls:
    secretName: wildcard-dev-cgraaaj-in-tls
